--- a/style.css
+++ b/style.css
@@ -133,6 +133,22 @@ main p, main ul, main ol, main pre {
     text-align: justify;
 }
 
+main pre {
+    font-size: 1.1rem;
+    line-height: 130%;
+    font-style: italic;
+}
+
+
+.skills-ex ol{
+    padding : 0 0 0 35px;
+
+}
+
+.skills-ex ol ul{
+    margin: 0 0 0 20px;
+}
+
 .skill-list li {
     font-size: 1.2rem;
     font-family: monospace;
